# efflux-backend

./: .env.sample  .gitignore  Dockerfile  README.md  README_CN.md  alembic.ini  config.ini  docker_deploy.ps1  docker_deploy.sh  main.py  pyproject.toml  start.sh
alembic/: env.py
controller/: artifacts_controller.py  chat_controller.py  chat_window_controller.py  file_controller.py  llm_controller.py  login_controller.py  mcp_app_controller.py  mcp_controller.py  user_controller.py
core/common/: container.py  logger.py  pagination.py
core/llm/: azure_open_ai.py  claude.py  doubao_open_ai.py  llm_chat.py  llm_manager.py  llm_message.py  ollama.py  open_ai.py  qwen_open_ai.py
core/mcp/: convert_mcp_tools.py
core/security/: middleware.py
dao/: artifacts_template_dao.py  chat_message_dao.py  chat_window_dao.py  llm_config_dao.py  llm_template_dao.py  mcp_app_dao.py  mcp_server_dao.py  user_dao.py
dto/: artifacts_schema.py  artifacts_template_dto.py  chat_dto.py  chat_window_dto.py  global_response.py  llm_config_dto.py  llm_template_dto.py  mcp_app_dto.py  mcp_server_dto.py  user_dto.py
exception/: exception.py  exception_dict.py
extensions/: ext_database.py
mcp_components/files/: test.db
model/: artifacts_template.py  chat_message.py  chat_window.py  llm_config.py  llm_template.py  mcp_app.py  mcp_server.py  user.py
scripts/: init_llm_templates.py
service/: artifacts_template_service.py  chat_service.py  chat_window_service.py  file_service.py  llm_service.py  mcp_app_service.py  mcp_config_service.py  storage_strategy.py  user_service.py
utils/: db_utils.py  result_utils.py
(+10 files in other folders)
