[project]
name = "efflux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LangChain 相关依赖
    "langchain>=0.3.11",
    "langchain-openai>=0.3.3",
    "langchain-anthropic>=0.3.12",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.2.59",
    
    # 数据库相关
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.36",
    
    # Web 框架相关
    "fastapi>=0.115.6",
    "python-multipart>=0.0.19",
    
    # 认证相关
    "bcrypt>=4.2.1",
    "passlib>=1.7.4",
    "PyJWT>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
    
    # 工具库
    "colorlog>=6.9.0",
    "dependency-injector>=4.44.0",
    "greenlet>=3.1.1",
    "mcp>=1.1.1",
    "openai>=1.57.2",
    "python-dotenv>=1.0.1",
    "jsonschema-pydantic>=0.6",
    "pydantic>=2.0.0",
]
